# film-review-app

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  main.py  pyproject.toml
config/: settings.py
films/: admin.py  models.py
films/migrations/: 0001_initial.py
films/tests/: test_models.py
openspec/: config.yaml
openspec/changes/archive/2026-06-28-refine-agentic-setup/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-06-28-refine-agentic-setup/specs/agent-guidance/: spec.md
openspec/changes/archive/2026-06-28-refine-agentic-setup/specs/openspec-config/: spec.md
openspec/changes/archive/2026-06-29-database-schema/: tasks.md
openspec/changes/archive/2026-06-29-database-schema/specs/film-catalog/: spec.md
openspec/changes/database-schema/: design.md  proposal.md
openspec/changes/database-schema/specs/favorites/: spec.md
openspec/changes/database-schema/specs/reviews/: spec.md
openspec/specs/favorites/: spec.md
openspec/specs/film-catalog/: spec.md
openspec/specs/reviews/: spec.md
